SERVER-59053 VectorClock is not gossiped in sessions started by a direct-to-shard command